<resources>
    <string name="app_name" translatable="false">LibrarIST</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_libraries" translatable="false">LibrariesActivity</string>
    <string name="search_for_a_library">Search for a library</string>
    <string name="search">Search</string>
    <string name="books">Books</string>
    <string name="map">Map</string>
    <string name="user">User</string>
    <string name="search_for_a_book">Search for a book</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="my_text" translatable="false">My text</string>
    <string name="library_name" translatable="false">Library Name</string>
    <string name="library_description">Library description</string>
    <string name="add_to_favourites">Favourite</string>
    <string name="check_out_book" translatable="false">Check-out</string>
    <string name="check_in_book" translatable="false">Check-in</string>
    <string name="navigate">Navigate</string>
    <string name="change_language">Change Language</string>
    <string name="take_picture">Take Picture</string>
    <string name="save_book">Save Book</string>
    <string name="name">Name</string>
    <string name="change_theme">Change Theme</string>
    <string name="share">Share</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_location">Location</string>
    <string name="add_lib">Add Library</string>
</resources>