<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".activities.CreateBookActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/check_in_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="20sp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_height="200dp"
            android:layout_width="200dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/todo"
            tools:src="@tools:sample/avatars" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/bookTitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/title"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            android:layout_marginBottom="13dp"
            android:textSize="17sp"/>

        <EditText
            android:id="@+id/bookDescriptionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/description"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/check_in_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="20sp"
        android:orientation="vertical">

        <Button
            android:id="@+id/takePictureBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:lines="1"
            android:layout_marginBottom="13dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="#8D6E63"
            android:text="@string/take_picture"/>

        <Button
            android:id="@+id/saveBookBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:lines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="#8D6E63"
            android:text="@string/save_book"/>

    </LinearLayout>
</LinearLayout>