<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activities.BookInfoActivity">

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="20sp"
        android:layout_marginVertical="20sp"/>

    <ImageView
        android:id="@+id/bookCover"
        android:layout_height="200dp"
        android:layout_width="200dp"
        android:layout_marginHorizontal="20dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/buttonFav"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:lines="1"
        android:layout_marginTop="20dp"
        android:text="@string/add_to_favourites"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="#8D6E63"/>

    <Button
        android:id="@+id/share_book"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:lines="1"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="20dp"
        android:text="@string/share"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="#8D6E63"/>

    <ListView
        android:id="@+id/bookAvailableLibraries"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:dividerHeight="3dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        />
</LinearLayout>